feat: button눌렀을 때 해당 내용으로 질문 redis 에서 꺼내오기 해결해야함